# Wetenschappelijk-Programmeren

./: .gitignore  README.md
Archives/Lab 2/: README  main.cpp
Archives/Lab 4/: CMakeLists.txt  Report.tex  T7.gnuplot  util.h
Archives/Lab 5/: Report.aux  main.cpp
Archives/Second/Lab 4/: CMakeLists.txt  chebychev.cpp  trio.cpp
Archives/Second/Lab 4/Report/: Report.tex
Archives/Second/Project/: CMakeLists.txt  One  Two
Archives/Second/Project/Onegraphs/: graphs.gnuplot
Archives/Second/Project/Report/: Report.tex
Archives/Second/Project/Twographs/: graphs.gnuplot
Data Fitting/: CMakeLists.txt  PointsWriter.h  main  main.cpp
Data Fitting/data/: mockcheb-approx.data  mockcheb-cheb.data  mockcheb-error.data  mockcheb-error2.data  mockcheb-function.data  mockcheb-grid.data  mockcheb-interpolation.data  polynomial-approx.data  polynomial-error.data  polynomial-error2.data  (+4 more)
Data Smoothing/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Utils.h  cmake_install.cmake  graphs.gnuplot  main  main.cpp
Lab 1/: Value.tiff  graphs.gnuplot  main.cpp
Lab 2/: .gitignore  CMakeLists.txt  Precision.tiff  Report.pages  main.cpp  result.c  util.cpp
Lab 2/Report/: Report.aux  Report.tex
Lab 3/: README  main.cpp
Lab 4/: Monisch  Monisch.cpp  README  Report.aux  Report.tex  T7  T7.cpp  chebychev  chebychev.cpp  graphs.gnuplot  main.cpp  trio  util.cpp  util.h
Lab 5/: Plot2p.pxm  Presentaton.key  Report.tex
Monte Carlo Methods/: README.md  main.cpp  make.sh
Orthogonale basisfuncties/: CMakeLists.txt  README.md  graphs.gnuplot  main.cpp
Orthogonale basisfuncties/report/: report.aux  report.out  report.tex
Project/: CMakeCache.txt  Makefile  One  Project.cbp  Three  Two  cmake_install.cmake  one.cpp  three.cpp  two.cpp  utils.h
Systems Of Linear Equations/: CMakeLists.txt  PointsWriter.cpp  README.md  Utils.h  main  main.cpp
test/: xx.tex
(+30 files in other folders)
