PROJECT(LAB2)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/Extra")

find_package(GSL)

INCLUDE_DIRECTORIES(${GSL_INCLUDES})

ADD_EXECUTABLE(Result Result.c)

TARGET_LINK_LIBRARIES(Result ${GSL_LIBRARIES})
