PROJECT(LAB2)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/Extra")

find_package(GSL)

INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})

ADD_EXECUTABLE(chebychev chebychev.cpp util.cpp)
ADD_EXECUTABLE(trio trio.cpp util.cpp)

TARGET_LINK_LIBRARIES(chebychev ${GSL_LIBRARIES})
TARGET_LINK_LIBRARIES(trio ${GSL_LIBRARIES})
